[project]
name = "oscn"
version = "0.0.0.90"
description = "Oklahoma State Courts Network case parsing utilities"
authors = [
    {name = "John Dungan",email = "john@docket2me.com"}
]
license = {text = "MIT"}
readme = "README.md"
homepage = "https://github.com/codefortulsa/oscn"
requires-python = "^3.8"
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "boto3",
    "selectolax",
    "python-dotenv (==0.19.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "7.1.0"

