[tool.poetry]
name = "oscn"
version = "0.0.0.91"
description = "Oklahoma State Courts Network case parsing utilities"
authors = ["John Dungan <john@docket2me.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/codefortulsa/oscn"
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "*"
beautifulsoup4 = "*"
selectolax = "*"
python-dotenv = "==0.19.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.1.0"
pytest-xdist = "^3.8.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

